# cuda_intersection

./: CMakeLists.txt  Scene.h  main.cpp
intersection001/: BVHIntersection.cu  BVHIntersection.h
models/: Cute_triceratops.stl
utils/: BoundingBox.h  IntersectionStrategy.h  IntersectionStrategyRegistry.cpp  IntersectionStrategyRegistry.h  Visualization.h  base.h  cudaUtils.h  performance.h  stl_reader.h
